# bastion

./: .gitignore  Anchor.toml  Cargo.toml  README.md  STABLEHACKS_FINAL_SUBMISSION.md  STABLEHACKS_SUBMISSION_PLAN.md  SUBMISSION_READY.md  TRANSFER_HOOK_SUMMARY.md  VIDEOS_PRODUCTION_GUIDE.md  VIDEO_README.md  compose_with_overlays.py  generate_audio_and_script.py  generate_videos.py  package-lock.json  package.json  record_and_compose_videos.py  test-devnet.mjs  verify_submission.sh  video_config_pitch.yaml  video_config_technical_demo.yaml
.github/workflows/: build-deploy.yml
app/: next.config.ts  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: AuditTrail.tsx  ComplianceReport.tsx  CreateVault.tsx  Header.tsx  KycGate.tsx  MemberManager.tsx  VaultDashboard.tsx  WithdrawalPanel.tsx
app/src/contexts/: WalletProvider.tsx
app/src/lib/: constants.ts  idl.ts  program.ts  solana.ts
app/src/types/: bn.d.ts
programs/bastion/: Cargo.toml
programs/bastion/src/: lib.rs
videos/frames/: demo_concat.txt  pitch_concat.txt
videos/tmp/: demo_list.txt  pitch_list.txt
videos/video1_technical_demo/: PRODUCTION_SCRIPT.md
videos/video2_pitch/: PRODUCTION_SCRIPT.md  concat.txt
